k8s/environments/preprod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corecommerce-web
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    spec:
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: corecommerce-web
          imagePullPolicy: IfNotPresent
          startupProbe:
            failureThreshold: 20
